# GuruBhet

./: .gitignore  CODE_SUPPORT.md  DATABASE_SUPPORT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  QUICK_START.md  README.md  docker-compose.yml  fake.py  fix.py  fix_h.py  livekit.yaml  write_model.py
backend/: .dockerignore  .env  ACCEPT_SESSION_COMPLETE_FIX.md  ACCEPT_SESSION_FIX.md  ACCEPT_SESSION_FIX_SUMMARY.txt  ACCEPT_SESSION_QUICK_REF.txt  CELERY_COMMANDS.md  CLOUDINARY_IMPLEMENTATION.md  CLOUDINARY_MIGRATION.md  CODE_SUPPORT.md  Dockerfile  ENDPOINT_MIGRATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  LIVEKIT_FIX_COMPLETE.md  MIGRATE_ERROR_HANDLING.py  RBAC_IMPLEMENTATION_COMPLETE.md  RBAC_QUICK_REFERENCE.md  RBAC_STATUS.md  README_RBAC.md  START_HERE_RBAC.md  SYNC_ENDPOINT_FIX.md  SYNC_ENDPOINT_NONETYPE_FIX.md  admin_cli.py  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  fix_annotated.py  fix_defaults.py  fix_imports.py  livekit.yaml  notes.txt  pyproject.toml  test_api.py  test_ast.py  test_auth_logic.py  test_get_boards.py  test_schema.py  test_sio_client.py
backend/app/: celery.py  main.py
backend/docs/: ADD_SESSIONS_STATUS.md  ARCHITECTURE_REFACTOR.md  AUTH_FLOW_FIX.md  CHANGELOG.md  CHANGES_END_ROOM_IDEMPOTENT.md  CLEANUP_SUMMARY.md  COMPLETE_SESSION_COMPLETION_EXPLANATION.md  DATABASE_CONSISTENCY_SUMMARY.md  DATABASE_CONSISTENCY_VISUAL.md  DATABASE_CONSISTENCY_WEBHOOK.md  ENUM_FIX.md  FINAL_SESSION_LOGIC_SUMMARY.md  HANDLE_SESSION_COMPLETION_ARCHITECTURE.md  IDEMPOTENT_END_ROOM.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_IDEMPOTENT_END_ROOM.md  LIVEKIT_24HOUR_FALLBACK_STRATEGY.md  LIVEKIT_UNDERSTAND.md  MIGRATION_TEMPLATE.py  PAYMENT_LOGIC_FINAL.md  PRESENCE_AWARE_MASTER_GUIDE.md  RBAC_COMPLETE_WORKFLOW_EXAMPLE.md  RBAC_DETAILED_EXPLANATION.md  RBAC_IMPLEMENTATION.md  RBAC_IMPLEMENTATION_SUMMARY.md  RBAC_SETUP_GUIDE.md  RBAC_VISUAL_DIAGRAMS.md  README.md  REMOVED_FILES_ARCHIVE.md  SESSION_COMPLETION_COMPLETE_IMPLEMENTATION.md  SESSION_COMPLETION_FINAL.md  SQL_ENUM_FIX.md  (+7 more)
(+418 files in other folders)
