[project]
name = "gurubhet-backend"
version = "0.1.0"
description = "GuruBhet - Teacher-Student Matching Platform"
authors = [
    {name = "Ujjal Shrestha", email = "ujjalshrestha3141592@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
    "livekit-api>=0.7.0",
    "celery[redis]>=5.4.0",
    "python-multipart>=0.0.9",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.13.0",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "python-socketio (>=5.16.1,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "cloudinary (>=1.44.1,<2.0.0)",
    "orjson (>=3.11.8,<4.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
psycopg2-binary = "^2.9.11"
alembic = "^1.18.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true


[tool.poetry]
# This tells Poetry NOT to try to install your project as a library
package-mode = false
